apps/onlyoffice/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  labels:
    app: onlyoffice
    app.kubernetes.io/name: onlyoffice
spec:
  selector:
    matchLabels:
      app: onlyoffice
      app.kubernetes.io/name: onlyoffice
  replicas: 1
  template:
    metadata:
      labels:
        app: onlyoffice
        app.kubernetes.io/name: onlyoffice
    spec:
      # nodeSelector:
      #   platform: n100
      containers:
        - name: onlyoffice
          image: thomisus/onlyoffice-documentserver-unlimited:9.2.1
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - "cp -v /tmp/default.json /etc/onlyoffice/documentserver;cp -v /tmp/ds-docservice.conf /etc/nginx/includes"
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: default-config
              mountPath: /tmp/default.json
              subPath: default.json
            - name: ds-docservice
              mountPath: /tmp/ds-docservice.conf
              subPath: ds-docservice.conf
      volumes:
        - name: default-config
          configMap:
            name: default-config
        - name: ds-docservice
          configMap:
            name: ds-docservice
