apps/onlyoffice/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  labels:
    app.kubernetes.io/name: onlyoffice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onlyoffice
