apps/onlyoffice/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onlyoffice
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`onlyoffice.internal`)
      kind: Rule
      services:
        - name: onlyoffice
          port: 80
